# AI-code-review-agent

./: README.md  app.py  main.py  pyproject.toml  render.yaml  requirements.txt
agent/: core.py  prompts.py  schemas.py
github/: client.py
reporting/: models.py  renderer.py
static/: index.html
tools/: code_tools.py  github_tools.py  registry.py  security_tools.py  static_analysis_tools.py
utils/: logger.py  subprocess_runner.py
